--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ extra_javascript:
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
   - stylesheets/extra.css
+  - stylesheets/timeline.css
 copyright: Copyright &copy; 2025 Monorail
 extra:
   social:
@@ -51,8 +52,9 @@ nav:
       - introduction.md
       - problem.md
       - Community:
-          - testnet.md
-          - discord.md
+          - community/roadmap.md
+          - community/testnet.md
+          - community/discord.md
   - Integration:
       - integration/index.md
   - Technical Design:
